@@ -385,14 +385,6 @@ be used to build Score-P are as follows:
                explicit include and lib options directly.
   --with-libunwind-include=<Path to libunwind headers: libunwind.h>
   --with-libunwind-lib=<Path to libunwind libraries>
-  --with-openacc-include=<path-to-openacc.h>
-               If openacc.h is not installed in the default
-               location, specify the directory where it can be
-               found.
-  --with-openacc-prof-include=<path-to-acc_prof.h>
-               If acc_prof.h is not installed in the default
-               location, specify the directory where it can be
-               found.
   --with-libOpenCL=(yes|no|<Path to libOpenCL installation>)
                If you want to build with libOpenCL support but do
                not have a libOpenCL in a standard location, you
@@ -626,10 +618,6 @@ variables:
               Path to libbfd headers: bfd.h. Superseded by --with-libbfd
               variants.
   LIBBFD_LIB  Path to libbfd libraries. Superseded by --with-libbfd variants.
-  OPENACC_INCLUDE
-              Path to openacc.h header.
-  OPENACC_PROFILING_INCLUDE
-              Path to acc_prof.h header.
   ROCM_PATH   Base directory of the AMD ROCm installation
   LIBAMDHIP64_INCLUDE
               Path to libamdhip64 headers: hip/hip_runtime.h
