@@ -6,7 +6,7 @@
 ## Copyright (c) 2014, 2016,
 ## Technische Universitaet Dresden, Germany
 ##
-## Copyright (c) 2016,
+## Copyright (c) 2016, 2024,
 ## Forschungszentrum Juelich GmbH, Germany
 ##
 ## This software may be modified and distributed under the terms of
@@ -32,8 +32,7 @@ libscorep_adapter_openacc_mgmt_la_CPPFLAGS = \
     $(UTILS_CPPFLAGS)                    \
     -I$(PUBLIC_INC_DIR)                  \
     -I$(INC_DIR_DEFINITIONS)             \
-    -I$(INC_ROOT)src/measurement/include \
-    $(SCOREP_OPENACC_CPPFLAGS)
+    -I$(INC_ROOT)src/measurement/include
 
 libscorep_adapter_openacc_mgmt_la_LDFLAGS = \
     $(library_api_version_ldflags)
@@ -53,8 +52,7 @@ libscorep_adapter_openacc_event_la_CPPFLAGS = \
     $(UTILS_CPPFLAGS)                    \
     -I$(PUBLIC_INC_DIR)                  \
     -I$(INC_DIR_DEFINITIONS)             \
-    -I$(INC_ROOT)src/measurement/include \
-    $(SCOREP_OPENACC_CPPFLAGS)
+    -I$(INC_ROOT)src/measurement/include
 
 libscorep_adapter_openacc_event_la_LDFLAGS = \
     $(library_api_version_ldflags)
